# Pharosa

./: .gitignore  CMakeLists.txt  JRT.out  JRT2  Makefile  README.md  explicit.cpp  forward.cpp  main.cpp  smallpt.cpp  test.cpp
Design.mindnode/: contents.xml  viewState.plist
best/: Cornell Box - 500.ppm  Mesh Object Test - 500.ppm
config/: 1.json  bunny.json  demo.json  example demo.stage  example.json  farmhouse - min.json  farmhouse.json  glass.json  ocean.json  sensor.json  sibenik.json  sppm.json  test Bezier.json  test dof.json  test dragon.json  test texture.json  triangles - min.json  triangles.json
config/example/: gg.json  gg.txt  group geo.json  obj.json  one.json  three.json  two.json  world.json
pyscripts/: img_codec.py  obj_preprocess.py  renderer_helper.py
src/: CMakeLists.txt  Pharosa.h  Ray.hpp  Render.cpp  Render.h  Renderer.cpp  Renderer.h  Renderer.hpp  Renderer.tcc  Vec.cpp  Vec.h  Vec.hpp  constants.cpp  constants.h  defs.h  lib.h  main.cpp  parsing.cpp  parsing.inl  test.cpp  test.h
src/alg/: Algorithm.cpp  Algorithm.h  All.h  CMakeLists.txt  DirectImaging.cpp  DirectImaging.h  GI.cpp  GI.h  Illuminator.cpp  Illuminator.h  KDGrid.cpp  KDGrid.h  PMGrid.cpp  PMGrid.h  PTE.cpp  PTE.h  PTF.cpp  PTF.h  PathTracing.cpp  PathTracing.h  PhotonMapping.cpp  PhotonMapping.h  RayCasting.cpp  RayCasting.h  RayTracing.cpp  RayTracing.h  RayTracing.tcc  RayTracing.tpp  SPPM.cpp  SPPM.h  VisiblePoint.h
src/camera/: All.h  BasicCamera.cpp  BasicCamera.h  CMakeLists.txt  Camera.cpp  Camera.h  Camera.inl  DOFCamera.cpp  DOFCamera.h  ImageMixer.cpp  ImageMixer.h  OrthoCamera.cpp  OrthoCamera.h  OrthographicCamera.cpp  OrthographicCamera.h
src/core/: CMakeLists.txt  Image.cpp  Image.h  Mat.cpp  Mat.h  Mat.tcc  Polynomial.cpp  Polynomial.h  Ray.hpp  Vec.cpp  Vec.h
src/geometric/: All.h  BezierRev.cpp  BezierRev.h  CMakeLists.txt  Cube.cpp  Cube.h  Finite.h  Geometry.cpp  Geometry.h  InfPlane.cpp  InfPlane.h  MeshObj.cpp  MeshObj.h  PolyRev.cpp  PolyRev.h  PolyRevolution.cpp  PolyRevolution.h  Sphere.cpp  Sphere.h  Triangle.cpp  Triangle.h
src/scene/: All.h  BoundingBox.cpp  BoundingBox.h  CMakeLists.txt  Cube.cpp  Cube.h  InfPlane.cpp  InfPlane.h  Intersection.cpp  Intersection.h  Intersection.hpp  KDNode.cpp  KDNode.h  Material.cpp  Material.h  Material.hpp  MeshObj.cpp  MeshObj.h  Object.cpp  Object.h  Object.tcc  Scene.cpp  Scene.h  Sphere.cpp  Sphere.h  Stage.cpp  Stage.h  Triangle.cpp  Triangle.h
src/scene/bounding/: All.h  BoundingBox.cpp  BoundingBox.h  BoundingCube.cpp  BoundingCube.h  BoundingSphere.cpp  BoundingSphere.h
src/utils/: CMakeLists.txt  Linear.hpp  Parser.cpp  Parser.h  Parsers.h  Solvers.h  funcs.cpp  funcs.hpp  sampling.cpp  sampling.h
src/utils/numerical/: Linear.hpp
src/utils/parser/: JsonParser.cpp  JsonParser.h  ObjParser.hpp
src/utils/parsers/: JsonParser.cpp  JsonParser.h  MeshParser.cpp  MeshParser.h  ObjParser.cpp  ObjParser.h  json.hpp  json_fwd.hpp
src/utils/solvers/: Linear.cpp  Linear.h  Linear.tcc  NonLinear.cpp  NonLinear.h  NonLinear.tcc
